tests/rustdoc-ui/intra-doc/crate-nonexistent.stderr
error: unresolved link to `crate::DoesNotExist`
  --> $DIR/crate-nonexistent.rs:3:6
   |
LL | /// [crate::DoesNotExist]
   |      ^^^^^^^^^^^^^^^^^^^ no item named `DoesNotExist` in module `crate_nonexistent`
   |
note: the lint level is defined here
  --> $DIR/crate-nonexistent.rs:1:9
   |
LL | #![deny(rustdoc::broken_intra_doc_links)]
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 1 previous error

